--- a/src/fren.css
+++ b/src/fren.css
@@ -72,7 +72,7 @@
 
 .fren-earned > img {
     margin-left: 8px;
-    width: 32px;
+    width: 20px;
 }
 
 .fren-earned {
